<resources>
    <string name="app_name">Talksy</string>
    <string name="what_s_up">What’s up</string>
    <string name="let_s_talk_with_your_friends_and_family_wherever_and_whenever">Let’s talk with your friends and family wherever and whenever</string>
    <string name="continue_with_phone">Continue with phone</string>
    <string name="Enter_your_phone_number">Enter your phone number</string>
    <string name="please_confirm_your_region_and_enter_your_phone_number">Please confirm your region and enter your phone number</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ve_sent_the_code_via_sms_to_62_999_9999_000">We’ve sent the code via SMS to +62 999 9999 000</string>
    <string name="hi_welcome_back">Hi, Welcome Back! 👋</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_with">Or With</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account</string>
    <string name="connect_with_your_friend_today">Connect with your friend today!</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="already_have_an_account"> <u>Already have an account?</u></string>
    <string name="login2"><u>Login</u></string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="didn_t_get_the_code_resend_code">Didn’t get the code? Resend code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_0">0</string>
    <string name="facebook_app_id">2004446756686613</string>
    <string name="fb_login_protocol_scheme">fb2004446756686613</string>
    <string name="facebook_client_token">4eb1db06218a38f0eb2a6509a6a55846</string>
    <string name="default_web_client_id">289279097440-iji07tlpsh0gg7qcug5j6ssg5dlf7pr2.apps.googleusercontent.com</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="premium">Premium</string>
    <string name="all">All</string>
    <string name="groups">Groups</string>
    <string name="channels">Channels</string>
    <string name="bots">Bots</string>
    <string name="username">Username</string>
    <string name="this_is_a_message">This is a message</string>
    <string name="_04_20_am">04:20 AM</string>
    <string name="done">Done</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_new_photo">Add New Photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_you_last_name">Enter you last name</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="bio">Bio</string>
    <string name="add_your_bio">Add your bio</string>
    <string name="phone_number">Phone number</string>
    <string name="change">Change</string>
    <string name="mojtabatn">mojtabatn</string>
    <string name="log_out">Log out</string>
    <string name="account">Account</string>
    <string name="edit">Edit</string>
    <string name="my_stories">My stories</string>
    <string name="wallet">Wallet</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="devices">Devices</string>
    <string name="chat_folders">Chat folders</string>
    <string name="notifications_and_sound">Notifications and Sound</string>
    <string name="privacy_and_security">Privacy and Security</string>
    <string name="data_and_storage">Data and Storage</string>
    <string name="notifications">Notifications</string>
    <string name="posts">Posts</string>
    <string name="media">Media</string>
    <string name="files">Files</string>
    <string name="voice">Voice</string>
    <string name="links">Links</string>
    <string name="gifs">GIFs</string>
    <string name="new_contact">New Contact</string>
    <string name="create">Create</string>
    <string name="add_your_phone_number">Add your phone number</string>
    <string name="find_people_nearby">Find People Nearby</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="contact_categories">Contact Categories</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="faris_kasapovic">Faris Kasapovic</string>
    <string name="last_seen_recently">last seen recently.</string>
    <string name="enter_username">Enter username</string>
    <string name="write_a_message">Write a message</string>
    <string name="create_a_group_chat">Create a group chat</string>
    <string name="groupmembers">GroupMembers</string>


</resources>