<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/EditProfileTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/edit_profile"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"

        />
    <TextView
        android:id="@+id/DoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/EditProfileTV"
        android:textColor="@color/blueBtn"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/profileImageIV"
        android:layout_width="96dp"
        android:layout_height="94dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EditProfileTV"
        android:layout_marginTop="32dp"
        android:background="@color/icons"
        />
    <TextView
        android:id="@+id/addNewPhotoTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_photo"
        android:textColor="@color/blueText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageIV"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/firstNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addNewPhotoTV"
        android:layout_marginTop="48dp"
        android:layout_marginStart="18dp"
        />

    <EditText
        android:id="@+id/firstNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameTV"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/enter_your_first_name"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintTop_toTopOf="@id/firstNameTV"
        app:layout_constraintBottom_toBottomOf="@id/firstNameTV"
        app:layout_constraintStart_toEndOf="@id/firstNameTV"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        />

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lastNameTV"
        app:layout_constraintTop_toBottomOf="@id/lastNameTV"
        android:layout_marginEnd="18dp"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/enter_you_last_name"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/Bio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameET"
        android:text="@string/bio"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        />
    <EditText
        android:id="@+id/BioET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Bio"
        android:layout_marginHorizontal="18dp"
        android:hint="@string/add_your_bio"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/BioET"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/phone_number"
        />
    


</androidx.constraintlayout.widget.ConstraintLayout>