<?xml version="1.0" encoding="utf-8"?>

<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/NewContactTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/new_contact"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="18dp"
        android:layout_marginStart="18dp"

        />
    <TextView
        android:id="@+id/CreateTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/NewContactTV"
        app:layout_constraintBottom_toBottomOf="@id/NewContactTV"
        android:textColor="@color/blueText"
        android:layout_marginEnd="18dp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/profileImageIV"
        android:layout_width="96dp"
        android:layout_height="94dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/circular_image"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/NewContactTV"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:id="@+id/firstNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImageIV"
        android:layout_marginTop="104dp"
        android:layout_marginStart="18dp"
        />

    <EditText
        android:id="@+id/firstNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameTV"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/enter_your_first_name"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/lastNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        app:layout_constraintTop_toTopOf="@id/firstNameTV"
        app:layout_constraintBottom_toBottomOf="@id/firstNameTV"
        app:layout_constraintStart_toEndOf="@id/firstNameTV"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="18dp"
        />

    <EditText
        android:id="@+id/lastNameET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/lastNameTV"
        app:layout_constraintTop_toBottomOf="@id/lastNameTV"
        android:layout_marginEnd="18dp"
        app:layout_constraintHorizontal_weight="1"
        android:hint="@string/enter_you_last_name"
        android:layout_marginTop="8dp"
        />
    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstNameET"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        />
    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameTV"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_username"
        android:layout_marginHorizontal="18dp"
        />


<TextView
    android:id="@+id/phoneNumberTV"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/usernameET"
    android:text="@string/phone_number"
    android:layout_marginHorizontal="18dp"
    android:layout_marginTop="8dp"
    />
    <EditText
        android:id="@+id/phoneNumberET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberTV"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="8dp"
        android:hint="@string/add_your_phone_number"
        />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>