<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="32dp">

    <TextView
        android:id="@+id/registerTV1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="@dimen/text_size_h2"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textFontWeight="600"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_4xl"
        />

    <TextView
        android:id="@+id/registerTV2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_with_your_friend_today"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTV1"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_body_1"
        android:layout_marginTop="@dimen/image_xxs"
        android:fontFamily="sans-serif"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/registerET1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTV2"
        android:background="@drawable/et_code_border"
        android:layout_marginTop="@dimen/space_l"
        android:hint="@string/enter_your_username"
        android:paddingStart="@dimen/space_xs"
        android:paddingVertical="@dimen/space_xs"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        />
    <EditText
        android:id="@+id/registerET2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerET1"
        android:background="@drawable/et_code_border"
        android:layout_marginTop="@dimen/space_xl"
        android:hint="@string/enter_your_email"
        android:paddingStart="@dimen/space_xs"
        android:paddingVertical="@dimen/space_xs"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/registerET3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerET2"
        android:background="@drawable/et_code_border"
        android:layout_marginTop="@dimen/space_xl"
        android:hint="@string/Enter_your_phone_number"
        android:paddingStart="@dimen/space_xs"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:paddingVertical="@dimen/space_xs"
        android:inputType="phone"
        android:digits="+0123456789"
        />
    <EditText
        android:id="@+id/registerET4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerET3"
        android:background="@drawable/et_code_border"
        android:layout_marginTop="@dimen/space_xl"
        android:hint="@string/enter_your_password"
        android:paddingStart="@dimen/space_xs"
        android:paddingVertical="@dimen/space_xs"
        android:inputType="textPassword"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        />
    <Button
        android:id="@+id/registerBtn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerET4"
        android:layout_marginTop="@dimen/space_xxl"
        android:backgroundTint="@color/blueBtn"
        style="@style/btnStyle"
        />


    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_xxxxs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn1"
        app:layout_constraintEnd_toStartOf="@id/loginTV4"
        android:layout_marginTop="@dimen/space_xxl"
        android:background="@color/gray"
        android:layout_marginEnd="8dp"
        />
    <TextView
        android:id="@+id/loginTV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_with"
        app:layout_constraintStart_toEndOf="@id/divider1"
        app:layout_constraintTop_toTopOf="@id/divider1"
        app:layout_constraintBottom_toBottomOf="@id/divider1"
        app:layout_constraintEnd_toStartOf="@id/divider2"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        />
    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_xxxxs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/loginTV4"
        app:layout_constraintBottom_toBottomOf="@id/loginTV4"
        app:layout_constraintStart_toEndOf="@id/loginTV4"
        android:background="@color/gray"
        android:layout_marginStart="8dp"
        />

    <Button
        android:id="@+id/registerBtn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTV4"
        android:layout_marginTop="@dimen/space_m"
        android:backgroundTint="@color/blueBtn"
        android:drawableStart="@drawable/fb_icon"
        android:drawableTint="@color/white"
        style="@style/btnStyle"

        />
    <Button
        android:id="@+id/registerBtn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn2"
        android:layout_marginTop="@dimen/space_m"
        android:text="@string/login_with_google"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_size_body_1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/google_icon"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/registerTV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerBtn3"
        app:layout_constraintEnd_toStartOf="@id/registerTV4"
        android:layout_marginTop="@dimen/space_m"
        android:text="@string/already_have_an_account"
        android:layout_marginStart="@dimen/space_4xl"
        android:textSize="@dimen/text_size_body_1"
        android:textColor="@color/gray"
        android:layout_marginEnd="5dp"
        />
    <TextView
        android:id="@+id/registerTV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/registerTV3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/registerTV3"
        app:layout_constraintBottom_toBottomOf="@id/registerTV3"
        android:text="@string/login2"
        android:textSize="@dimen/text_size_body_1"
        android:layout_marginEnd="@dimen/space_4xl"
        android:textColor="@color/login"
        />

    <ProgressBar
        android:id="@+id/loadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:progressTint="@color/blueBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>